SF-151 video alignment fix

--- a/ui-kit/ui-kit-header/less/header-6.less
+++ b/ui-kit/ui-kit-header/less/header-6.less
@@ -189,8 +189,8 @@
             border: 4px solid #fff;
         }
         > iframe {
-            width: 100%;
-            height: 100%;
+            width: 220px;
+            height: 150px;
             border: 0;
             display: block;
         }
