--- a/ui-kit/ui-kit-header/less/header-7.less
+++ b/ui-kit/ui-kit-header/less/header-7.less
@@ -315,8 +315,8 @@
             border: 4px solid #fff;
         }
         > iframe {
-            width: 100%;
-            height: 100%;
+            width: 220px;
+            height: 158px;
             border: 0;
             display: block;
         }
